Added system:time_start to exports for filtering

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,16 +188,17 @@
       "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
       "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-18T20:02:05.027494Z\"\n",
+      "  \"updateTime\": \"2023-05-18T20:09:31.015997Z\"\n",
       "}\n",
       "{\n",
       "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
       "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-18T20:02:05.027494Z\"\n",
+      "  \"updateTime\": \"2023-05-18T20:09:31.015997Z\"\n",
       "}\n",
       "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2021-02-01 00:00:00\n",
-      "Running 20200101\n"
+      "Running 20200101\n",
+      "1577836800000\n"
      ]
     }
    ],
@@ -337,7 +338,7 @@
     "        out_region = out_fc.geometry().buffer(20)\n",
     "        \n",
     "        # Export the image\n",
-    "        eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = in_date, properties = properties)"
+    "        eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = in_date, properties = properties)\n"
    ]
   }
  ],
