Added function to ensure that histogram classes with no pixels are given a value of 0

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -59,18 +59,18 @@
     "\n",
     "# Define time period to export\n",
     "start_date = datetime.datetime(2021, 1, 1)\n",
-    "end_date = datetime.datetime(2021, 2, 1)\n",
+    "end_date = datetime.datetime(2022, 1, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'GridMET'\n",
+    "in_ic_name = 'USDM'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'precip'\n",
+    "var_name = 'drought'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,24 +188,70 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-18T21:28:37.433230Z\"\n",
+      "  \"updateTime\": \"2023-05-19T19:25:35.649168Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-18T21:28:37.433230Z\"\n",
+      "  \"updateTime\": \"2023-05-19T19:25:35.649168Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2021-01-01 00:00:00 - 2021-02-01 00:00:00\n",
+      "Appending to Image Collection for dates 2021-01-01 00:00:00 - 2022-01-01 00:00:00\n",
       "Running 20210105\n",
-      "Running 20210110\n",
-      "Running 20210115\n",
-      "Running 20210120\n",
-      "Running 20210125\n",
-      "Running 20210130\n"
+      "Running 20210112\n",
+      "Running 20210119\n",
+      "Running 20210126\n",
+      "Running 20210202\n",
+      "Running 20210209\n",
+      "Running 20210216\n",
+      "Running 20210223\n",
+      "Running 20210302\n",
+      "Running 20210309\n",
+      "Running 20210316\n",
+      "Running 20210323\n",
+      "Running 20210330\n",
+      "Running 20210406\n",
+      "Running 20210413\n",
+      "Running 20210420\n",
+      "Running 20210427\n",
+      "Running 20210504\n",
+      "Running 20210511\n",
+      "Running 20210518\n",
+      "Running 20210525\n",
+      "Running 20210601\n",
+      "Running 20210608\n",
+      "Running 20210615\n",
+      "Running 20210622\n",
+      "Running 20210629\n",
+      "Running 20210706\n",
+      "Running 20210713\n",
+      "Running 20210720\n",
+      "Running 20210727\n",
+      "Running 20210803\n",
+      "Running 20210810\n",
+      "Running 20210817\n",
+      "Running 20210824\n",
+      "Running 20210831\n",
+      "Running 20210907\n",
+      "Running 20210914\n",
+      "Running 20210921\n",
+      "Running 20210928\n",
+      "Running 20211005\n",
+      "Running 20211012\n",
+      "Running 20211019\n",
+      "Running 20211026\n",
+      "Running 20211102\n",
+      "Running 20211109\n",
+      "Running 20211116\n",
+      "Running 20211123\n",
+      "Running 20211130\n",
+      "Running 20211207\n",
+      "Running 20211214\n",
+      "Running 20211221\n",
+      "Running 20211228\n"
      ]
     }
    ],
