--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "To dos  \n",
     "1) Handle custom bin widths of histograms for categorical datasets  \n",
-    "2) Generate preprocessing scripts for other datasets  \n",
-    "3) Make sure datetimes are set as system:timestart for filtering  \n",
-    "4) Incorporate notes: https://docs.google.com/document/d/1WMLKJiXq87lZbjD6lXSeodNaR30Oh1TTlfnikyNvuvM/edit\n",
+    "2) Incorporate notes: https://docs.google.com/document/d/1WMLKJiXq87lZbjD6lXSeodNaR30Oh1TTlfnikyNvuvM/edit\n",
     "    Check that changes are working okay"
    ]
   },
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -58,19 +56,19 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2021, 1, 1)\n",
-    "end_date = datetime.datetime(2022, 1, 1)\n",
+    "start_date = datetime.datetime(2020, 1, 1)\n",
+    "end_date = datetime.datetime(2021, 1, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'USDM'\n",
+    "in_ic_name = 'MTBS'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'drought'\n",
+    "var_name = 'Severity'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -112,7 +110,7 @@
     "              'LS_NDVI': {'in_ic_paths': ['LANDSAT/LT05/C02/T1_L2', 'LANDSAT/LE07/C02/T1_L2', 'LANDSAT/LC08/C02/T1_L2', 'LANDSAT/LC09/C02/T1_L2'],\n",
     "                          'var_names': ['NDVI'],\n",
     "                          'var_type': 'Continuous'},\n",
-    "              'MOD16_ET': {'in_ic_paths': ['MODIS/061/MOD16A2'],\n",
+    "              'MOD16_ET': {'in_ic_paths': ['MODIS/006/MOD16A2'],\n",
     "                           'var_names': ['ET', 'PET'],\n",
     "                           'var_type': 'Continuous'},\n",
     "              'MTBS': {'in_ic_paths': ['projects/climate-engine-pro/assets/mtbs_mosaics_annual'],\n",
@@ -180,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -188,70 +186,29 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-19T19:25:35.649168Z\"\n",
+      "  \"updateTime\": \"2023-05-19T20:03:05.027915Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-usdm-drought\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-19T19:25:35.649168Z\"\n",
+      "  \"updateTime\": \"2023-05-19T20:03:05.027915Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2021-01-01 00:00:00 - 2022-01-01 00:00:00\n",
-      "Running 20210105\n",
-      "Running 20210112\n",
-      "Running 20210119\n",
-      "Running 20210126\n",
-      "Running 20210202\n",
-      "Running 20210209\n",
-      "Running 20210216\n",
-      "Running 20210223\n",
-      "Running 20210302\n",
-      "Running 20210309\n",
-      "Running 20210316\n",
-      "Running 20210323\n",
-      "Running 20210330\n",
-      "Running 20210406\n",
-      "Running 20210413\n",
-      "Running 20210420\n",
-      "Running 20210427\n",
-      "Running 20210504\n",
-      "Running 20210511\n",
-      "Running 20210518\n",
-      "Running 20210525\n",
-      "Running 20210601\n",
-      "Running 20210608\n",
-      "Running 20210615\n",
-      "Running 20210622\n",
-      "Running 20210629\n",
-      "Running 20210706\n",
-      "Running 20210713\n",
-      "Running 20210720\n",
-      "Running 20210727\n",
-      "Running 20210803\n",
-      "Running 20210810\n",
-      "Running 20210817\n",
-      "Running 20210824\n",
-      "Running 20210831\n",
-      "Running 20210907\n",
-      "Running 20210914\n",
-      "Running 20210921\n",
-      "Running 20210928\n",
-      "Running 20211005\n",
-      "Running 20211012\n",
-      "Running 20211019\n",
-      "Running 20211026\n",
-      "Running 20211102\n",
-      "Running 20211109\n",
-      "Running 20211116\n",
-      "Running 20211123\n",
-      "Running 20211130\n",
-      "Running 20211207\n",
-      "Running 20211214\n",
-      "Running 20211221\n",
-      "Running 20211228\n"
+      "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2021-01-01 00:00:00\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'bandNames'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [79]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     96\u001b[0m     in_i \u001b[38;5;241m=\u001b[39m eedb_col\u001b[38;5;241m.\u001b[39mpreprocess_mtbs(in_ic_paths, var_name, start_date, end_date)\n\u001b[1;32m     98\u001b[0m     \u001b[38;5;66;03m# Get list of date strings from image\u001b[39;00m\n\u001b[0;32m---> 99\u001b[0m     in_dates \u001b[38;5;241m=\u001b[39m \u001b[43min_i\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbandNames\u001b[49m()\u001b[38;5;241m.\u001b[39mgetInfo()\n\u001b[1;32m    102\u001b[0m \u001b[38;5;66;03m# ---------------------------- Iterate over in_dates with functions ---------------------------------\u001b[39;00m\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m in_date \u001b[38;5;129;01min\u001b[39;00m in_dates:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'bandNames'"
      ]
     }
    ],
@@ -340,7 +297,7 @@
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
     "        \n",
-    "    elif in_ic_paths == ['MODIS/061/MOD16A2']:\n",
+    "    elif in_ic_paths == ['MODIS/006/MOD16A2']:\n",
     "    \n",
     "        # Run function to pre-process the GridMET drought data\n",
     "        in_i = eedb_col.preprocess_modet(in_ic_paths, var_name, start_date, end_date)\n",
