Added conditional masking and appended masking information into properties to add to asset metadata

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -81,6 +81,12 @@
     "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
     "# in_fc = in_fc.filterBounds(geometry)\n",
     "\n",
+    "\n",
+    "# ------------------------------ Define mask, if applicable --------------------------------------------\n",
+    "\n",
+    "# Apply mask for ownership, landcover, or other variables. Must be binary mask\n",
+    "mask = True\n",
+    "mask_path = 'projects/dri-apps/assets/blm-admin/blm-natl-admu-sma-binary'\n",
     "\n",
     "\n",
     "# ---------------------------- Additional parameters derived from above --------------------------------\n",
@@ -178,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,18 +203,8 @@
       "  \"type\": \"IMAGE_COLLECTION\",\n",
       "  \"updateTime\": \"2023-05-19T20:03:05.027915Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2021-01-01 00:00:00\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'bandNames'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [79]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     96\u001b[0m     in_i \u001b[38;5;241m=\u001b[39m eedb_col\u001b[38;5;241m.\u001b[39mpreprocess_mtbs(in_ic_paths, var_name, start_date, end_date)\n\u001b[1;32m     98\u001b[0m     \u001b[38;5;66;03m# Get list of date strings from image\u001b[39;00m\n\u001b[0;32m---> 99\u001b[0m     in_dates \u001b[38;5;241m=\u001b[39m \u001b[43min_i\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbandNames\u001b[49m()\u001b[38;5;241m.\u001b[39mgetInfo()\n\u001b[1;32m    102\u001b[0m \u001b[38;5;66;03m# ---------------------------- Iterate over in_dates with functions ---------------------------------\u001b[39;00m\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m in_date \u001b[38;5;129;01min\u001b[39;00m in_dates:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'bandNames'"
+      "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2021-01-01 00:00:00\n",
+      "Running 20200101\n"
      ]
     }
    ],
@@ -219,8 +215,13 @@
     "    print(\"Initializing Image Collection by creating EE asset and exporting ID image\")\n",
     "    \n",
     "    # Create dictionary of properties\n",
-    "    properties = {'system:index': '0_id', 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path, 'in_fc_id': in_fc_id,\n",
-    "                  'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type, 'var_name': var_name, 'var_units': var_units}\n",
+    "    properties = {'system:index': '0_id', 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path, \n",
+    "                  'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type, \n",
+    "                  'var_name': var_name, 'var_units': var_units, 'mask': mask}\n",
+    "    if mask == True:\n",
+    "            properties['mask_path'] = mask_path\n",
+    "    elif mask == False:\n",
+    "            properties['mask_path'] = 'None'\n",
     "    \n",
     "    # Apply ID image function to input feature collection\n",
     "    out_list = eedb_cor.generate_id_img(in_fc = in_fc, in_fc_id = in_fc_id)\n",
@@ -319,14 +320,26 @@
     "    for in_date in in_dates:\n",
     "    \n",
     "        print('Running ' + in_date)\n",
-    "    \n",
-    "        # Select date band for single date\n",
-    "        in_i_date = in_i.select([in_date])\n",
+    "        \n",
+    "        # Conditionally apply mask to images\n",
+    "        if mask == True:\n",
+    "            \n",
+    "            # Select date band for single date\n",
+    "            in_i_date = in_i.select([in_date]).updateMask(ee.Image(mask_path))\n",
+    "            \n",
+    "        elif mask == False:\n",
+    "            \n",
+    "            # Select date band for single date\n",
+    "            in_i_date = in_i.select([in_date])\n",
     "    \n",
     "        # Create dictionary of properties        \n",
     "        properties = {'system:index': in_date, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
     "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type,\\\n",
-    "                      'var_name': var_name, 'var_units': var_units}\n",
+    "                      'var_name': var_name, 'var_units': var_units, 'mask': mask}\n",
+    "        if mask == True:\n",
+    "            properties['mask_path'] = mask_path\n",
+    "        elif mask == False:\n",
+    "            properties['mask_path'] = 'None'\n",
     "\n",
     "        if var_type == 'Continuous':\n",
     "        \n",
