Resolved date parsing error with RAP 16-day preprocess function

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -57,24 +57,24 @@
     "\n",
     "# Define time period to export\n",
     "start_date = datetime.datetime(2020, 1, 1)\n",
-    "end_date = datetime.datetime(2021, 1, 1)\n",
+    "end_date = datetime.datetime(2020, 7, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'MTBS'\n",
+    "in_ic_name = 'RAP16_Production'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'Severity'\n",
+    "var_name = 'afgAGB'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
     "\n",
     "# Define input path for Feature Collection\n",
-    "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-admu-districtoffice-polygons'\n",
+    "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'\n",
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
     "\n",
     "# # Subset by geometry\n",
@@ -84,9 +84,9 @@
     "\n",
     "# ------------------------------ Define mask, if applicable --------------------------------------------\n",
     "\n",
-    "# Apply mask for ownership, landcover, or other variables. Must be binary mask\n",
-    "mask = True\n",
-    "mask_path = 'projects/dri-apps/assets/blm-admin/blm-natl-admu-sma-binary'\n",
+    "# Apply mask for ownership, landcover, or other variables. Must be binary mask.\n",
+    "mask = False\n",
+    "# mask_path = 'projects/dri-apps/assets/blm-admin/blm-natl-admu-sma-binary'\n",
     "\n",
     "\n",
     "# ---------------------------- Additional parameters derived from above --------------------------------\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,19 +192,32 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-19T20:03:05.027915Z\"\n",
+      "  \"updateTime\": \"2023-05-23T21:08:56.022231Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-mtbs-severity\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-19T20:03:05.027915Z\"\n",
+      "  \"updateTime\": \"2023-05-23T21:08:56.022231Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2021-01-01 00:00:00\n",
-      "Running 20200101\n"
+      "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2020-07-01 00:00:00\n",
+      "['1_2020001_afgAGB', '1_2020017_afgAGB', '1_2020033_afgAGB', '1_2020049_afgAGB', '1_2020065_afgAGB', '1_2020081_afgAGB', '1_2020097_afgAGB', '1_2020113_afgAGB', '1_2020129_afgAGB', '1_2020145_afgAGB', '1_2020161_afgAGB', '1_2020177_afgAGB']\n",
+      "['20200101', '20200117', '20200202', '20200218', '20200305', '20200321', '20200406', '20200422', '20200508', '20200524', '20200609', '20200625']\n",
+      "Running 20200101\n",
+      "Running 20200117\n",
+      "Running 20200202\n",
+      "Running 20200218\n",
+      "Running 20200305\n",
+      "Running 20200321\n",
+      "Running 20200406\n",
+      "Running 20200422\n",
+      "Running 20200508\n",
+      "Running 20200524\n",
+      "Running 20200609\n",
+      "Running 20200625\n"
      ]
     }
    ],
@@ -293,7 +306,6 @@
     "    \n",
     "        # Run function to pre-process the Landsat SR NDVI data\n",
     "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, start_date, end_date)\n",
-    "        print(in_i.projection().nominalScale().getInfo())\n",
     "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
