Small change to round dataset resolution in output image properties

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -64,11 +64,11 @@
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'RAP16_Production'\n",
+    "in_ic_name = 'MOD16_ET'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'afgAGB'\n",
+    "var_name = 'PET'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -169,7 +169,7 @@
     "    \n",
     "# Pull out additional variables needed to run exports\n",
     "in_ic_paths = in_ic_dict.get(in_ic_name).get('in_ic_paths')\n",
-    "in_ic_res = ee.ImageCollection(in_ic_paths[0]).first().projection().nominalScale().getInfo()\n",
+    "in_ic_res = ee.Number(ee.ImageCollection(in_ic_paths[0]).first().projection().nominalScale()).round().getInfo()\n",
     "var_type = in_ic_dict.get(in_ic_name).get('var_type')\n",
     "var_units = var_dict.get(var_name).get('units')\n",
     "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\""
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -192,31 +192,40 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-23T21:08:56.022231Z\"\n",
+      "  \"updateTime\": \"2023-05-23T21:07:40.473408Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-rap16production-afgagb\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-23T21:08:56.022231Z\"\n",
+      "  \"updateTime\": \"2023-05-23T21:07:40.473408Z\"\n",
       "}\n",
       "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2020-07-01 00:00:00\n",
-      "['1_2020001_afgAGB', '1_2020017_afgAGB', '1_2020033_afgAGB', '1_2020049_afgAGB', '1_2020065_afgAGB', '1_2020081_afgAGB', '1_2020097_afgAGB', '1_2020113_afgAGB', '1_2020129_afgAGB', '1_2020145_afgAGB', '1_2020161_afgAGB', '1_2020177_afgAGB']\n",
-      "['20200101', '20200117', '20200202', '20200218', '20200305', '20200321', '20200406', '20200422', '20200508', '20200524', '20200609', '20200625']\n",
       "Running 20200101\n",
+      "Running 20200109\n",
       "Running 20200117\n",
+      "Running 20200125\n",
       "Running 20200202\n",
+      "Running 20200210\n",
       "Running 20200218\n",
+      "Running 20200226\n",
       "Running 20200305\n",
+      "Running 20200313\n",
       "Running 20200321\n",
+      "Running 20200329\n",
       "Running 20200406\n",
+      "Running 20200414\n",
       "Running 20200422\n",
+      "Running 20200430\n",
       "Running 20200508\n",
+      "Running 20200516\n",
       "Running 20200524\n",
+      "Running 20200601\n",
       "Running 20200609\n",
+      "Running 20200617\n",
       "Running 20200625\n"
      ]
     }
