Add Bounding Polygon Functionality

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -77,6 +77,11 @@
     "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'\n",
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
     "\n",
+    "#Define Bounding Box function\n",
+    "def bbox(f):\n"
+    "  return(f.simplify(1000))\n",
+    "in_fc_bbox = ee.FeatureCollection(in_fc.map(bbox)).geometry().convexHull(10)\n",
+    "\n",
     "# # Subset by geometry\n",
     "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
     "# in_fc = in_fc.filterBounds(geometry)\n",
@@ -314,7 +319,7 @@
     "    elif in_ic_paths == ['LANDSAT/LT05/C02/T1_L2', 'LANDSAT/LE07/C02/T1_L2', 'LANDSAT/LC08/C02/T1_L2', 'LANDSAT/LC09/C02/T1_L2']:\n",
     "    \n",
     "        # Run function to pre-process the Landsat SR NDVI data\n",
-    "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, start_date, end_date)\n",
+    "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, start_date, end_date, in_fc_bbox)\n",
     "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
