Update Boundary Function

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -78,7 +78,7 @@
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
     "\n",
     "#Define Bounding Box function\n",
-    "def bbox(f):\n"
+    "def bbox(f):\n",
     "  return(f.simplify(1000))\n",
     "in_fc_bbox = ee.FeatureCollection(in_fc.map(bbox)).geometry().convexHull(10)\n",
     "\n",
