Replaced BLM allotment feature collection because of 26 bad geometries

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -55,31 +55,26 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2020, 1, 1)\n",
-    "end_date = datetime.datetime(2020, 7, 1)\n",
+    "start_date = datetime.datetime(2020, 8, 1)\n",
+    "end_date = datetime.datetime(2020, 9, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'MOD16_ET'\n",
+    "in_ic_name = 'GridMET'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'PET'\n",
+    "var_name = 'precip'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
     "\n",
     "# Define input path for Feature Collection\n",
-    "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'\n",
+    "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons'\n",
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
-    "\n",
-    "#Define Bounding Box function\n",
-    "def bbox(f):\n",
-    "  return(f.simplify(1000))\n",
-    "in_fc_bbox = ee.FeatureCollection(in_fc.map(bbox)).geometry().convexHull(10)\n",
     "\n",
     "# # Subset by geometry\n",
     "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
@@ -154,7 +149,7 @@
     "            'Severity': {'units': 'fire severity'}}\n",
     "\n",
     "# Define land unit names\n",
-    "if(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'):\n",
+    "if(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons'):\n",
     "    land_unit_long = 'BLM_Natl_Grazing_Allotment_Polygons'\n",
     "    land_unit_short = 'BLM_Allotments'\n",
     "    in_fc_id = 'ALLOT_ID'\n",
@@ -188,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,41 +191,24 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-23T21:07:40.473408Z\"\n",
+      "  \"updateTime\": \"2023-05-30T19:09:56.606337Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-pet\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-23T21:07:40.473408Z\"\n",
+      "  \"updateTime\": \"2023-05-30T19:09:56.606337Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2020-07-01 00:00:00\n",
-      "Running 20200101\n",
-      "Running 20200109\n",
-      "Running 20200117\n",
-      "Running 20200125\n",
-      "Running 20200202\n",
-      "Running 20200210\n",
-      "Running 20200218\n",
-      "Running 20200226\n",
-      "Running 20200305\n",
-      "Running 20200313\n",
-      "Running 20200321\n",
-      "Running 20200329\n",
-      "Running 20200406\n",
-      "Running 20200414\n",
-      "Running 20200422\n",
-      "Running 20200430\n",
-      "Running 20200508\n",
-      "Running 20200516\n",
-      "Running 20200524\n",
-      "Running 20200601\n",
-      "Running 20200609\n",
-      "Running 20200617\n",
-      "Running 20200625\n"
+      "Appending to Image Collection for dates 2020-08-01 00:00:00 - 2020-09-01 00:00:00\n",
+      "Running 20200802\n",
+      "Running 20200807\n",
+      "Running 20200812\n",
+      "Running 20200817\n",
+      "Running 20200822\n",
+      "Running 20200827\n"
      ]
     }
    ],
@@ -318,7 +296,7 @@
     "    elif in_ic_paths == ['LANDSAT/LT05/C02/T1_L2', 'LANDSAT/LE07/C02/T1_L2', 'LANDSAT/LC08/C02/T1_L2', 'LANDSAT/LC09/C02/T1_L2']:\n",
     "    \n",
     "        # Run function to pre-process the Landsat SR NDVI data\n",
-    "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, start_date, end_date, in_fc_bbox)\n",
+    "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, start_date, end_date, in_fc)\n",
     "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
