Clean up libraries

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To dos  \n",
-    "1) Handle custom bin widths of histograms for categorical datasets  "
+    " ## Import packages and modules"
    ]
   },
   {
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -53,19 +52,19 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2021, 1, 1)\n",
-    "end_date = datetime.datetime(2021, 2, 15)\n",
+    "start_date = datetime.datetime(2022, 3, 1)\n",
+    "end_date = datetime.datetime(2024, 1, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'Landsat'\n",
+    "in_ic_name = 'GridMET'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'NDVI'\n",
+    "var_name = 'precip'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,21 +188,110 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-landsat-ndvi\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-landsat-ndvi\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-07T18:28:44.331016Z\"\n",
+      "  \"updateTime\": \"2023-06-07T19:55:01.055156Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-landsat-ndvi\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-landsat-ndvi\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmdistrictoffices-gridmet-precip\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-07T18:28:44.331016Z\"\n",
+      "  \"updateTime\": \"2023-06-07T19:55:13.406896Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2021-01-01 00:00:00 - 2021-02-15 00:00:00\n",
-      "Running  2020-12-31 17:00:00\n",
-      "Running  2021-01-16 17:00:00\n",
-      "Running  2021-02-01 17:00:00\n"
+      "Appending to Image Collection for dates 2022-03-01 00:00:00 - 2024-01-01 00:00:00\n",
+      "Running  2022-02-28 23:00:00\n",
+      "Running  2022-03-05 23:00:00\n",
+      "Running  2022-03-10 23:00:00\n",
+      "Running  2022-03-16 00:00:00\n",
+      "Running  2022-03-21 00:00:00\n",
+      "Running  2022-03-26 00:00:00\n",
+      "Running  2022-03-31 00:00:00\n",
+      "Running  2022-04-05 00:00:00\n",
+      "Running  2022-04-10 00:00:00\n",
+      "Running  2022-04-15 00:00:00\n",
+      "Running  2022-04-20 00:00:00\n",
+      "Running  2022-04-25 00:00:00\n",
+      "Running  2022-04-30 00:00:00\n",
+      "Running  2022-05-05 00:00:00\n",
+      "Running  2022-05-10 00:00:00\n",
+      "Running  2022-05-15 00:00:00\n",
+      "Running  2022-05-20 00:00:00\n",
+      "Running  2022-05-25 00:00:00\n",
+      "Running  2022-05-30 00:00:00\n",
+      "Running  2022-06-04 00:00:00\n",
+      "Running  2022-06-09 00:00:00\n",
+      "Running  2022-06-14 00:00:00\n",
+      "Running  2022-06-19 00:00:00\n",
+      "Running  2022-06-24 00:00:00\n",
+      "Running  2022-06-29 00:00:00\n",
+      "Running  2022-07-04 00:00:00\n",
+      "Running  2022-07-09 00:00:00\n",
+      "Running  2022-07-14 00:00:00\n",
+      "Running  2022-07-19 00:00:00\n",
+      "Running  2022-07-24 00:00:00\n",
+      "Running  2022-07-29 00:00:00\n",
+      "Running  2022-08-03 00:00:00\n",
+      "Running  2022-08-08 00:00:00\n",
+      "Running  2022-08-13 00:00:00\n",
+      "Running  2022-08-18 00:00:00\n",
+      "Running  2022-08-23 00:00:00\n",
+      "Running  2022-08-28 00:00:00\n",
+      "Running  2022-09-02 00:00:00\n",
+      "Running  2022-09-07 00:00:00\n",
+      "Running  2022-09-12 00:00:00\n",
+      "Running  2022-09-17 00:00:00\n",
+      "Running  2022-09-22 00:00:00\n",
+      "Running  2022-09-27 00:00:00\n",
+      "Running  2022-10-02 00:00:00\n",
+      "Running  2022-10-07 00:00:00\n",
+      "Running  2022-10-12 00:00:00\n",
+      "Running  2022-10-17 00:00:00\n",
+      "Running  2022-10-22 00:00:00\n",
+      "Running  2022-10-27 00:00:00\n",
+      "Running  2022-11-01 00:00:00\n",
+      "Running  2022-11-06 00:00:00\n",
+      "Running  2022-11-10 23:00:00\n",
+      "Running  2022-11-15 23:00:00\n",
+      "Running  2022-11-20 23:00:00\n",
+      "Running  2022-11-25 23:00:00\n",
+      "Running  2022-11-30 23:00:00\n",
+      "Running  2022-12-05 23:00:00\n",
+      "Running  2022-12-10 23:00:00\n",
+      "Running  2022-12-15 23:00:00\n",
+      "Running  2022-12-20 23:00:00\n",
+      "Running  2022-12-25 23:00:00\n",
+      "Running  2022-12-30 23:00:00\n",
+      "Running  2023-01-04 23:00:00\n",
+      "Running  2023-01-09 23:00:00\n",
+      "Running  2023-01-14 23:00:00\n",
+      "Running  2023-01-19 23:00:00\n",
+      "Running  2023-01-24 23:00:00\n",
+      "Running  2023-01-29 23:00:00\n",
+      "Running  2023-02-03 23:00:00\n",
+      "Running  2023-02-08 23:00:00\n",
+      "Running  2023-02-13 23:00:00\n",
+      "Running  2023-02-18 23:00:00\n",
+      "Running  2023-02-23 23:00:00\n",
+      "Running  2023-02-28 23:00:00\n",
+      "Running  2023-03-05 23:00:00\n",
+      "Running  2023-03-10 23:00:00\n",
+      "Running  2023-03-16 00:00:00\n",
+      "Running  2023-03-21 00:00:00\n",
+      "Running  2023-03-26 00:00:00\n",
+      "Running  2023-03-31 00:00:00\n",
+      "Running  2023-04-05 00:00:00\n",
+      "Running  2023-04-10 00:00:00\n",
+      "Running  2023-04-15 00:00:00\n",
+      "Running  2023-04-20 00:00:00\n",
+      "Running  2023-04-25 00:00:00\n",
+      "Running  2023-04-30 00:00:00\n",
+      "Running  2023-05-05 00:00:00\n",
+      "Running  2023-05-10 00:00:00\n",
+      "Running  2023-05-15 00:00:00\n",
+      "Running  2023-05-20 00:00:00\n",
+      "Running  2023-05-25 00:00:00\n",
+      "Running  2023-05-30 00:00:00\n"
      ]
     }
    ],
