--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -52,7 +52,7 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2021, 12, 1)\n",
+    "start_date = datetime.datetime(1980, 1, 1)\n",
     "end_date = datetime.datetime(2024, 1, 1)\n",
     "\n",
     "\n",
@@ -64,7 +64,7 @@
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'vpd'\n",
+    "var_name = 'precip'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,129 +189,91 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-vpd\",\n",
-      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-vpd\",\n",
+      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
+      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-12T19:41:05.107009Z\"\n",
+      "  \"updateTime\": \"2023-06-14T15:24:09.893079Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-vpd\",\n",
-      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmet-vpd\",\n",
+      "  \"id\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
+      "  \"name\": \"projects/climate-engine-pro/assets/blm-database/blmdistrictoffices-gridmetdrought-shorttermdroughtblend\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-06-12T19:41:05.107009Z\"\n",
+      "  \"updateTime\": \"2023-06-14T15:24:09.893079Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2021-12-01 00:00:00 - 2024-01-01 00:00:00\n",
-      "Running  2021-11-30 23:00:00\n",
-      "Running  2021-12-05 23:00:00\n",
-      "Running  2021-12-10 23:00:00\n",
-      "Running  2021-12-15 23:00:00\n",
-      "Running  2021-12-20 23:00:00\n",
-      "Running  2021-12-25 23:00:00\n",
-      "Running  2021-12-30 23:00:00\n",
-      "Running  2022-01-04 23:00:00\n",
-      "Running  2022-01-09 23:00:00\n",
-      "Running  2022-01-14 23:00:00\n",
-      "Running  2022-01-19 23:00:00\n",
-      "Running  2022-01-24 23:00:00\n",
-      "Running  2022-01-29 23:00:00\n",
-      "Running  2022-02-03 23:00:00\n",
-      "Running  2022-02-08 23:00:00\n",
-      "Running  2022-02-13 23:00:00\n",
-      "Running  2022-02-18 23:00:00\n",
-      "Running  2022-02-23 23:00:00\n",
-      "Running  2022-02-28 23:00:00\n",
-      "Running  2022-03-05 23:00:00\n",
-      "Running  2022-03-10 23:00:00\n",
-      "Running  2022-03-16 00:00:00\n",
-      "Running  2022-03-21 00:00:00\n",
-      "Running  2022-03-26 00:00:00\n",
-      "Running  2022-03-31 00:00:00\n",
-      "Running  2022-04-05 00:00:00\n",
-      "Running  2022-04-10 00:00:00\n",
-      "Running  2022-04-15 00:00:00\n",
-      "Running  2022-04-20 00:00:00\n",
-      "Running  2022-04-25 00:00:00\n",
-      "Running  2022-04-30 00:00:00\n",
-      "Running  2022-05-05 00:00:00\n",
-      "Running  2022-05-10 00:00:00\n",
-      "Running  2022-05-15 00:00:00\n",
-      "Running  2022-05-20 00:00:00\n",
-      "Running  2022-05-25 00:00:00\n",
-      "Running  2022-05-30 00:00:00\n",
-      "Running  2022-06-04 00:00:00\n",
-      "Running  2022-06-09 00:00:00\n",
-      "Running  2022-06-14 00:00:00\n",
-      "Running  2022-06-19 00:00:00\n",
-      "Running  2022-06-24 00:00:00\n",
-      "Running  2022-06-29 00:00:00\n",
-      "Running  2022-07-04 00:00:00\n",
-      "Running  2022-07-09 00:00:00\n",
-      "Running  2022-07-14 00:00:00\n",
-      "Running  2022-07-19 00:00:00\n",
-      "Running  2022-07-24 00:00:00\n",
-      "Running  2022-07-29 00:00:00\n",
-      "Running  2022-08-03 00:00:00\n",
-      "Running  2022-08-08 00:00:00\n",
-      "Running  2022-08-13 00:00:00\n",
-      "Running  2022-08-18 00:00:00\n",
-      "Running  2022-08-23 00:00:00\n",
-      "Running  2022-08-28 00:00:00\n",
-      "Running  2022-09-02 00:00:00\n",
-      "Running  2022-09-07 00:00:00\n",
-      "Running  2022-09-12 00:00:00\n",
-      "Running  2022-09-17 00:00:00\n",
-      "Running  2022-09-22 00:00:00\n",
-      "Running  2022-09-27 00:00:00\n",
-      "Running  2022-10-02 00:00:00\n",
-      "Running  2022-10-07 00:00:00\n",
-      "Running  2022-10-12 00:00:00\n",
-      "Running  2022-10-17 00:00:00\n",
-      "Running  2022-10-22 00:00:00\n",
-      "Running  2022-10-27 00:00:00\n",
-      "Running  2022-11-01 00:00:00\n",
-      "Running  2022-11-06 00:00:00\n",
-      "Running  2022-11-10 23:00:00\n",
-      "Running  2022-11-15 23:00:00\n",
-      "Running  2022-11-20 23:00:00\n",
-      "Running  2022-11-25 23:00:00\n",
-      "Running  2022-11-30 23:00:00\n",
-      "Running  2022-12-05 23:00:00\n",
-      "Running  2022-12-10 23:00:00\n",
-      "Running  2022-12-15 23:00:00\n",
-      "Running  2022-12-20 23:00:00\n",
-      "Running  2022-12-25 23:00:00\n",
-      "Running  2022-12-30 23:00:00\n",
-      "Running  2023-01-04 23:00:00\n",
-      "Running  2023-01-09 23:00:00\n",
-      "Running  2023-01-14 23:00:00\n",
-      "Running  2023-01-19 23:00:00\n",
-      "Running  2023-01-24 23:00:00\n",
-      "Running  2023-01-29 23:00:00\n",
-      "Running  2023-02-03 23:00:00\n",
-      "Running  2023-02-08 23:00:00\n",
-      "Running  2023-02-13 23:00:00\n",
-      "Running  2023-02-18 23:00:00\n",
-      "Running  2023-02-23 23:00:00\n",
-      "Running  2023-02-28 23:00:00\n",
-      "Running  2023-03-05 23:00:00\n",
-      "Running  2023-03-10 23:00:00\n",
-      "Running  2023-03-16 00:00:00\n",
-      "Running  2023-03-21 00:00:00\n",
-      "Running  2023-03-26 00:00:00\n",
-      "Running  2023-03-31 00:00:00\n",
-      "Running  2023-04-05 00:00:00\n",
-      "Running  2023-04-10 00:00:00\n",
-      "Running  2023-04-15 00:00:00\n",
-      "Running  2023-04-20 00:00:00\n",
-      "Running  2023-04-25 00:00:00\n",
-      "Running  2023-04-30 00:00:00\n",
-      "Running  2023-05-05 00:00:00\n",
-      "Running  2023-05-10 00:00:00\n",
-      "Running  2023-05-15 00:00:00\n",
-      "Running  2023-05-20 00:00:00\n",
-      "Running  2023-05-25 00:00:00\n",
-      "Running  2023-05-30 00:00:00\n",
-      "Running  2023-06-04 00:00:00\n"
+      "Appending to Image Collection for dates 1980-01-01 00:00:00 - 1981-01-01 00:00:00\n",
+      "Running  1980-01-04 23:00:00\n",
+      "Running  1980-01-09 23:00:00\n",
+      "Running  1980-01-14 23:00:00\n",
+      "Running  1980-01-19 23:00:00\n",
+      "Running  1980-01-24 23:00:00\n",
+      "Running  1980-01-29 23:00:00\n",
+      "Running  1980-02-03 23:00:00\n",
+      "Running  1980-02-08 23:00:00\n",
+      "Running  1980-02-13 23:00:00\n",
+      "Running  1980-02-18 23:00:00\n",
+      "Running  1980-02-23 23:00:00\n",
+      "Running  1980-02-28 23:00:00\n",
+      "Running  1980-03-04 23:00:00\n",
+      "Running  1980-03-09 23:00:00\n",
+      "Running  1980-03-14 23:00:00\n",
+      "Running  1980-03-19 23:00:00\n",
+      "Running  1980-03-24 23:00:00\n",
+      "Running  1980-03-29 23:00:00\n",
+      "Running  1980-04-03 23:00:00\n",
+      "Running  1980-04-08 23:00:00\n",
+      "Running  1980-04-13 23:00:00\n",
+      "Running  1980-04-18 23:00:00\n",
+      "Running  1980-04-23 23:00:00\n",
+      "Running  1980-04-29 00:00:00\n",
+      "Running  1980-05-04 00:00:00\n",
+      "Running  1980-05-09 00:00:00\n",
+      "Running  1980-05-14 00:00:00\n",
+      "Running  1980-05-19 00:00:00\n",
+      "Running  1980-05-24 00:00:00\n",
+      "Running  1980-05-29 00:00:00\n",
+      "Running  1980-06-03 00:00:00\n",
+      "Running  1980-06-08 00:00:00\n",
+      "Running  1980-06-13 00:00:00\n",
+      "Running  1980-06-18 00:00:00\n",
+      "Running  1980-06-23 00:00:00\n",
+      "Running  1980-06-28 00:00:00\n",
+      "Running  1980-07-03 00:00:00\n",
+      "Running  1980-07-08 00:00:00\n",
+      "Running  1980-07-13 00:00:00\n",
+      "Running  1980-07-18 00:00:00\n",
+      "Running  1980-07-23 00:00:00\n",
+      "Running  1980-07-28 00:00:00\n",
+      "Running  1980-08-02 00:00:00\n",
+      "Running  1980-08-07 00:00:00\n",
+      "Running  1980-08-12 00:00:00\n",
+      "Running  1980-08-17 00:00:00\n",
+      "Running  1980-08-22 00:00:00\n",
+      "Running  1980-08-27 00:00:00\n",
+      "Running  1980-09-01 00:00:00\n",
+      "Running  1980-09-06 00:00:00\n",
+      "Running  1980-09-11 00:00:00\n",
+      "Running  1980-09-16 00:00:00\n",
+      "Running  1980-09-21 00:00:00\n",
+      "Running  1980-09-26 00:00:00\n",
+      "Running  1980-10-01 00:00:00\n",
+      "Running  1980-10-06 00:00:00\n",
+      "Running  1980-10-11 00:00:00\n",
+      "Running  1980-10-16 00:00:00\n",
+      "Running  1980-10-21 00:00:00\n",
+      "Running  1980-10-26 00:00:00\n",
+      "Running  1980-10-30 23:00:00\n",
+      "Running  1980-11-04 23:00:00\n",
+      "Running  1980-11-09 23:00:00\n",
+      "Running  1980-11-14 23:00:00\n",
+      "Running  1980-11-19 23:00:00\n",
+      "Running  1980-11-24 23:00:00\n",
+      "Running  1980-11-29 23:00:00\n",
+      "Running  1980-12-04 23:00:00\n",
+      "Running  1980-12-09 23:00:00\n",
+      "Running  1980-12-14 23:00:00\n",
+      "Running  1980-12-19 23:00:00\n",
+      "Running  1980-12-24 23:00:00\n",
+      "Running  1980-12-29 23:00:00\n"
      ]
     }
    ],
@@ -354,7 +316,7 @@
     "\n",
     "    print(f\"Appending to Image Collection for dates {start_date} - {end_date}\")\n",
     "\n",
-    "    \n",
+    "\n",
     "    # ----- Preprocess input Image Collection based on path for each date -----\n",
     "\n",
     "    dates = eedb_col.get_collection_dates(in_ic_paths, start_date, end_date)\n",
@@ -363,7 +325,6 @@
     "        print(\"Running \", datetime.datetime.fromtimestamp(date/1000.0))\n",
     "        \n",
     "        date_ymd = datetime.datetime.fromtimestamp(date/1000.0).strftime('%Y%m%d')\n",
-    "        \n",
     "\n",
     "        if in_ic_paths == ['GRIDMET/DROUGHT']:\n",
     "\n",
@@ -420,7 +381,7 @@
     "            in_i = in_i\n",
     "\n",
     "        # Create dictionary of properties        \n",
-    "        properties = {'system:index': date_ymd, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
+    "        properties = {'system:index': date_ymd, 'system:time_start': date, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
     "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type,\\\n",
     "                      'var_name': var_name, 'var_units': var_units, 'mask': mask}\n",
     "        \n",
@@ -451,6 +412,48 @@
     "\n",
     "        # Export the image\n",
     "        eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = date_ymd, properties = properties)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check completeness of image collections and re-run any images that are missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[315900000000, 316332000000, 316764000000, 317196000000, 317628000000, 318060000000, 318492000000, 318924000000, 319356000000, 319788000000, 320220000000, 320652000000, 321084000000, 321516000000, 321948000000, 322380000000, 322812000000, 323244000000, 323676000000, 324108000000, 324540000000, 324972000000, 325404000000, 325836000000, 326268000000, 326700000000, 327132000000, 327564000000, 327996000000, 328428000000, 328860000000, 329292000000, 329724000000, 330156000000, 330588000000, 331020000000, 331452000000, 331884000000, 332316000000, 332748000000, 333180000000, 333612000000, 334044000000, 334476000000, 334908000000, 335340000000, 335772000000, 336204000000, 336636000000, 337068000000, 337500000000, 337932000000, 338364000000, 338796000000, 339228000000, 339660000000, 340092000000, 340524000000, 340956000000, 341388000000, 341820000000, 342252000000, 342684000000, 343116000000, 343548000000, 343980000000, 344412000000, 344844000000, 345276000000, 345708000000, 346140000000, 346572000000, 347004000000]\n",
+      "[315900000000, 316332000000, 316764000000, 317196000000, 317628000000, 318060000000, 318492000000, 318924000000, 319356000000, 319788000000, 320220000000, 320652000000, 321084000000, 321516000000, 321948000000, 322380000000, 322812000000, 323244000000, 323676000000, 324108000000, 324540000000, 324972000000, 325404000000, 325836000000, 326268000000, 326700000000, 327132000000, 327564000000, 327996000000, 328428000000, 328860000000, 329292000000, 329724000000, 330156000000, 330588000000, 331020000000, 331452000000, 331884000000, 332316000000, 332748000000, 333180000000, 333612000000, 334044000000, 334476000000, 334908000000, 335340000000, 335772000000, 336204000000, 336636000000, 337068000000, 337500000000, 337932000000, 338364000000, 338796000000, 339228000000, 339660000000, 340092000000, 340524000000, 340956000000, 341388000000, 341820000000, 342252000000, 342684000000, 343116000000, 343548000000, 343980000000, 344412000000, 344844000000, 345276000000, 345708000000, 346140000000, 346572000000, 347004000000]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get list of all dates\n",
+    "all_dates = eedb_col.get_collection_dates(in_ic_paths, start_date, end_date)\n",
+    "\n",
+    "# Get list of dates from collection\n",
+    "coll_dates = ee.ImageCollection(out_path).aggregate_array('system:time_start').distinct().getInfo()\n",
+    "\n",
+    "# Get list of dates missing from collection\n",
+    "set(all_dates) - set(coll_dates)\n"
    ]
   }
  ],
